--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>example.com</title>
+    <title>rubal501.github.io</title>
     <style>
       html, body {
         height: 100%;
@@ -54,7 +54,7 @@
   <body>
     <main>
       <h1>example.com</h1>
-      <p>Our website is under construction.</p>
+      <p>The website is under construction.</p>
     </main>
   </body>
 </html>
