--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </head>
   <body>
     <main>
-      <h1>example.com</h1>
+      <h1>rubal501.github.io</h1>
       <p>The website is under construction.</p>
     </main>
   </body>
